	Added new more colors link for text/background color menus.
	Added new more advanced color picker based on a contribution by Tristan Poet.
	Added new functionality to always keep inlinepopups in viewable area contributed by Joshua T. Corbin.
	Added new maximize button for inlinepopups contributed by Joshua T. Corbin.
	Fixed issue where focus wasn't returned to editor after using a inlinepopup. Contributed by Andy Skelton.
	Fixed issue where fullscreen.htm file used the _dev version of the JavaScript.
	Fixed issue with TinyMCE forcing absolute links for document local anchors. Ex: #a got converted into b.htm#a
	Fixed issue where drupal initialization issue with Drupal.
	Fixed bug where text color/background color menus wasn't visible in fullscreen mode.
	Fixed bug where text color/background color menus wasn't hidden when switching to/from fullscreen mode.
	Fixed bug where embed elements was converted into ibed elements.
	Fixed bug where contrain proportions in advimage dialog wasn't working.
	Fixes bug where an inlinepopup wouldn't close if mcWindows.selectedWindow was nullified contributed by Joshua T. Corbin.
Version 2.0.9 (2007-01-09)
	Added support for fullscreen new window mode since the other method was problematic for some.
	Added new hide_selects_on_submit option. Enables the possibility to enable/disable disabling of TinyMCE select elements.
	Added new removeInstance callback for plugins and also a new remove_instance_callback option.
	Added warning if flash and media plugin is used at the same time. Flash plugin should be replaced with media plugin.
	Fixed so that fullscreen can be used even if placed in absolute positioned divs with borders etc.
	Fixed so that contextmenu on named anchors doesn't display the link/unlink items.
	Fixed so that wrap in source editor dialog works in Opera.
	Fixed so that single quotes/&#39; is only applied to text nodes not attributes.